force-app/main/default/objects/Facility_Availability__c/Facility_Availability__c.object-meta.xml
<CustomObject>
    <description>To track the facility availability for session scheduling and appointments.</description>
    <label>Facility Availability</label>
    <nameField>
        <displayFormat>FAV-{00000}</displayFormat>
        <label>Facility Availability #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>