force-app/main/default/objects/Facility_Availability__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Facility Availabilities</relationshipLabel>
    <relationshipName>Facility_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>