force-app/main/default/objects/Facility_Availability__c/fields/Friday_From__c.field-meta.xml
<CustomField>
    <fullName>Friday_From__c</fullName>
    <label>Friday (From)</label>
    <type>Time</type>
</CustomField>