force-app/main/default/objects/Facility_Availability__c/fields/Monday_To__c.field-meta.xml
<CustomField>
    <fullName>Monday_To__c</fullName>
    <label>Monday (To)</label>
    <type>Time</type>
</CustomField>