force-app/main/default/objects/Facility_Availability__c/fields/Saturday_From__c.field-meta.xml
<CustomField>
    <fullName>Saturday_From__c</fullName>
    <label>Saturday (From)</label>
    <type>Time</type>
</CustomField>