force-app/main/default/objects/Facility_Availability__c/fields/Saturday_To__c.field-meta.xml
<CustomField>
    <fullName>Saturday_To__c</fullName>
    <label>Saturday (To)</label>
    <type>Time</type>
</CustomField>