force-app/main/default/objects/Facility_Availability__c/fields/Sunday_To__c.field-meta.xml
<CustomField>
    <fullName>Sunday_To__c</fullName>
    <label>Sunday (To)</label>
    <type>Time</type>
</CustomField>