force-app/main/default/objects/Facility_Availability__c/fields/Thursday_From__c.field-meta.xml
<CustomField>
    <fullName>Thursday_From__c</fullName>
    <label>Thursday (From)</label>
    <type>Time</type>
</CustomField>